# data-analysis-with-python-and-pandas-by-chris-bruehl-maven-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
section01-Numpy-Primer/: section-01-assignment-1.py  section-01-assignment-2.py  section-01-assignment-3.py  section-01-assignment-4.py  section-01-assignment-5-2.ipynb  section-01-assignment-5.ipynb  section-01-assignment-5.py  section-01-assignment-6-marimo.py  section-01-assignment-6.py  section-01-assignment-7.py
section02-pandas-Series/: section02-assignment01.py  section02-assignment02.py  section02-assignment03.py  section02-assignment04.py  section02-assignment05.py  section02-assignment06.py  section02-assignment07.py
