[project]
name = "data-analysis-with-python-and-pandas-by-chris-bruehl-maven-analytics"
version = "0.1.0"
description = "Exercise solutions by Dickson Souza to LinkedIn Learning course, link at README, offered by Chris Bruehl via LinkedIn Learning, on Python and Pandas for Data Analysis"
authors = [
    {name = "Dickson Souza",email = "36424026+disouzam@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "prek (>=0.2.23,<0.3.0)",
    "marimo (>=0.18.4,<0.19.0)",
    "jupyterlab (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
